After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 691459 - the keyboard indicator shows non-deletable/duplicate xkb layout after ibus config migration
the keyboard indicator shows non-deletable/duplicate xkb layout after ibus co...
Status: RESOLVED FIXED
Product: gnome-settings-daemon
Classification: Core
Component: keyboard
3.6.x
Other Linux
: Normal normal
: ---
Assigned To: gnome-settings-daemon-maint
gnome-settings-daemon-maint
Depends on:
Blocks:
 
 
Reported: 2013-01-10 07:03 UTC by Akira TAGOH
Modified: 2013-01-10 12:00 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
keyboard: Don't migrate ibus xkb engines (1.22 KB, patch)
2013-01-10 10:46 UTC, Rui Matos
committed Details | Review

Description Akira TAGOH 2013-01-10 07:03:13 UTC
Initially reported to https://bugzilla.redhat.com/show_bug.cgi?id=893856

After upgrading to f18 from f17, the keyboard indicator displays non-deletable-from-the-input-source-dialog and roughly duplicate xkb layout after ibus config migration. in my case, I can see ja, jp and Anthy is there but just two on the input source tab at Region & Language on gnomecc. I suppose ja is something added by g-s-d and jp and Anthy is came from ibus. in fact I can see ['xkb:jp::jpn', 'anthy'] at /desktop/ibus/general/engines-order and preload-engines.

Version-Release number of selected component (if applicable):
gnome-settings-daemon-3.6.3-2.fc18.x86_64

How reproducible:
always

Steps to Reproduce:
1.fedup to f18 from f17 where ibus is configured.
2.
3.
  
Actual results:
three layout on the indicator (at least) and two layout on the input source tab.

Expected results:
two layout on the indicator and all of them should be manageable on the input source tab.

Additional info:
xkb layout from ibus should be ignored by migration maybe or convert it to what gnomecc knows.
Comment 1 Rui Matos 2013-01-10 10:46:36 UTC
Created attachment 233144 [details] [review]
keyboard: Don't migrate ibus xkb engines

We never want the ibus xkb engines since they are just duplicating the
plain xkb sources.
--

On 3.8 the problem isn't so bad because g-c-c shows you the "buggy"
entry so you can remove it there. Nonetheless we can apply this to
both 3.6 and master since we really never want these xkb engines.
Comment 2 Bastien Nocera 2013-01-10 10:58:06 UTC
Review of attachment 233144 [details] [review]:

++
Comment 3 Rui Matos 2013-01-10 12:00:11 UTC
Attachment 233144 [details] pushed as 65bb2ba - keyboard: Don't migrate ibus xkb engines