keyboard: Don't migrate ibus xkb engines

We never want the ibus xkb engines since they are just duplicating the
plain xkb sources.

https://bugzilla.gnome.org/show_bug.cgi?id=691459